--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^3.0.1",
+        "vue-country-region-select": "^2.0.16",
         "vue-loader": "^17.0.0",
         "vue-router": "^4.1.3",
         "vuex": "^4.0.2",
